# recommendation_system_api

./: .dockerignore  .env_example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
ab_test/: ab_test_recommender_upgrade.ipynb  ab_test_script.py
app/: app.py  main.py  schema.py  table_post.py
app/api/: posts.py  recommend.py  users.py
app/core/: ab_groups.py  features_loader.py  model_loader.py  popular.py  recommender.py  state.py
app/db/: database.py  table_feed.py  table_post.py  table_user.py
drafts/: app.py  app_check_cache.py  data_load.py  database.py  models.py  schema.py  table_post.py  table_user.py
models/: best_catboost_model_16_7.cbm  cb_fm_full_model_20_05  no_dl_catboost_model_16_07.cbm
recommender/: build_train_dataset.py  feature_engineering.py  metrics.py  model.py  reseach_and_train.ipynb  save_features_to_db.py  train_model_entry.py
recommender/data_samples/: likes.csv  post_features.csv  train_sample.csv  user_features.csv
recommender/features/: build_train_dataset.py  feature_engineering.py  save_features_to_db.py
recommender/training/: model.py  train_model_entry.py
src/: app.py  database.py  table_feed.py  table_user.py
tests/: test_api.py  test_api_noid.py
